[project]
name = "line-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "form-app",
    "gspread>=6.2.1",
    "line-bot-sdk>=3.17.1",
    "networkx>=3.6.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.4",
    "shared",
]

[tool.uv.workspace]
members = [
    "form_app",
    "flow_charts",
    "shared/database",
    "senders",
    "webhook",
    "shared",
    "alembic"
]

[tool.uv.sources]
shared = { workspace = true }
form-app = { workspace = true }
